--- a/scraping/scratch.ipynb
+++ b/scraping/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,52 +13,80 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "PermissionError",
+     "evalue": "[Errno 1] Operation not permitted",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m p1 \u001b[39m=\u001b[39m subprocess\u001b[39m.\u001b[39mPopen([\u001b[39m\"\u001b[39m\u001b[39msu - hadoop\u001b[39m\u001b[39m\"\u001b[39m], shell\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m p2 \u001b[39m=\u001b[39m subprocess\u001b[39m.\u001b[39mPopen([\u001b[39m\"\u001b[39m\u001b[39mecho $USER\u001b[39m\u001b[39m\"\u001b[39m], shell\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(p1\u001b[39m.\u001b[39mcommunicate())\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(p2\u001b[39m.\u001b[39mcommunicate())\n",
-      "File \u001b[0;32m~/miniconda3/envs/scraping/lib/python3.8/subprocess.py:1016\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[0;34m(self, input, timeout)\u001b[0m\n\u001b[1;32m   1014\u001b[0m         stderr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr\u001b[39m.\u001b[39mread()\n\u001b[1;32m   1015\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr\u001b[39m.\u001b[39mclose()\n\u001b[0;32m-> 1016\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwait()\n\u001b[1;32m   1017\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1018\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniconda3/envs/scraping/lib/python3.8/subprocess.py:1079\u001b[0m, in \u001b[0;36mPopen.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1077\u001b[0m     endtime \u001b[39m=\u001b[39m _time() \u001b[39m+\u001b[39m timeout\n\u001b[1;32m   1078\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1079\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_wait(timeout\u001b[39m=\u001b[39;49mtimeout)\n\u001b[1;32m   1080\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1081\u001b[0m     \u001b[39m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[1;32m   1082\u001b[0m     \u001b[39m# The first keyboard interrupt waits briefly for the child to\u001b[39;00m\n\u001b[1;32m   1083\u001b[0m     \u001b[39m# exit under the common assumption that it also received the ^C\u001b[39;00m\n\u001b[1;32m   1084\u001b[0m     \u001b[39m# generated SIGINT and will exit rapidly.\u001b[39;00m\n\u001b[1;32m   1085\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniconda3/envs/scraping/lib/python3.8/subprocess.py:1804\u001b[0m, in \u001b[0;36mPopen._wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1802\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreturncode \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1803\u001b[0m     \u001b[39mbreak\u001b[39;00m  \u001b[39m# Another thread waited.\u001b[39;00m\n\u001b[0;32m-> 1804\u001b[0m (pid, sts) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_try_wait(\u001b[39m0\u001b[39;49m)\n\u001b[1;32m   1805\u001b[0m \u001b[39m# Check the pid and loop as waitpid has been known to\u001b[39;00m\n\u001b[1;32m   1806\u001b[0m \u001b[39m# return 0 even without WNOHANG in odd situations.\u001b[39;00m\n\u001b[1;32m   1807\u001b[0m \u001b[39m# http://bugs.python.org/issue14396.\u001b[39;00m\n\u001b[1;32m   1808\u001b[0m \u001b[39mif\u001b[39;00m pid \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpid:\n",
-      "File \u001b[0;32m~/miniconda3/envs/scraping/lib/python3.8/subprocess.py:1762\u001b[0m, in \u001b[0;36mPopen._try_wait\u001b[0;34m(self, wait_flags)\u001b[0m\n\u001b[1;32m   1760\u001b[0m \u001b[39m\"\"\"All callers to this function MUST hold self._waitpid_lock.\"\"\"\u001b[39;00m\n\u001b[1;32m   1761\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1762\u001b[0m     (pid, sts) \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mwaitpid(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpid, wait_flags)\n\u001b[1;32m   1763\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mChildProcessError\u001b[39;00m:\n\u001b[1;32m   1764\u001b[0m     \u001b[39m# This happens if SIGCLD is set to be ignored or waiting\u001b[39;00m\n\u001b[1;32m   1765\u001b[0m     \u001b[39m# for child processes has otherwise been disabled for our\u001b[39;00m\n\u001b[1;32m   1766\u001b[0m     \u001b[39m# process.  This child is dead, we can't get the status.\u001b[39;00m\n\u001b[1;32m   1767\u001b[0m     pid \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpid\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m     os\u001b[39m.\u001b[39msetuid(get_gid(groupname))\n\u001b[1;32m     20\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mcurrent user group id: \u001b[39m\u001b[39m\"\u001b[39m, get_gid(groupname))\n\u001b[0;32m---> 22\u001b[0m set_user(config\u001b[39m.\u001b[39mHADOOP_USER_NAME, config\u001b[39m.\u001b[39mHADOOP_USER_GROUP)\n",
+      "Cell \u001b[0;32mIn [1], line 17\u001b[0m, in \u001b[0;36mset_user\u001b[0;34m(username, groupname)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_user\u001b[39m(username, groupname):\n\u001b[0;32m---> 17\u001b[0m     os\u001b[39m.\u001b[39;49msetgid(get_uid(username))\n\u001b[1;32m     18\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mcurrent user id: \u001b[39m\u001b[39m\"\u001b[39m, get_uid(username))\n\u001b[1;32m     19\u001b[0m     os\u001b[39m.\u001b[39msetuid(get_gid(groupname))\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 1] Operation not permitted"
      ]
     }
    ],
    "source": [
     "import subprocess\n",
     "import config\n",
-    "p1 = subprocess.Popen([\"su - hadoop\"], shell=True)\n",
+    "import pwd\n",
+    "import os\n",
+    "import grp\n",
+    "p1 = subprocess.Popen([\"su - hadoop && echo $USER\"], shell=True)\n",
     "p2 = subprocess.Popen([\"echo $USER\"], shell=True)\n",
-    "print(p1.communicate())\n",
-    "print(p2.communicate())"
+    "def get_uid(username):\n",
+    "    uid = pwd.getpwnam(username)[2]\n",
+    "    return uid\n",
+    "\n",
+    "def get_gid(groupname):\n",
+    "    uid = grp.getgrnam(groupname)[2]\n",
+    "    return uid\n",
+    "\n",
+    "def set_user(username, groupname):\n",
+    "    os.setgid(get_uid(username))\n",
+    "    print(\"current user id: \", get_uid(username))\n",
+    "    os.setuid(get_gid(groupname))\n",
+    "    print(\"current user group id: \", get_gid(groupname))\n",
+    "\n",
+    "set_user(config.HADOOP_USER_NAME, config.HADOOP_USER_GROUP)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calibretaliation\n",
-      "(None, None)\n"
+      "1000\n",
+      "1000\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import os\n",
+    "print(os.getuid())\n",
+    "print(os.getgid())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pwd\n",
+    "print(pwd.getpwnam('hadoop').pw_uid)\n"
+   ]
   },
   {
    "cell_type": "code",
