--- a/scraping/scraping.ipynb
+++ b/scraping/scraping.ipynb
@@ -458,7 +458,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -472,11 +472,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "101a3afa6278cd264bbb2e8f63625e77a93374e6605ce7f77a4a263f33ac8815"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
